# robot

./: .dockerignore  .editorconfig  .env  .env.example  .eslintrc.cjs  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  .prettierrc  .yarnrc.yml  CONTRIBUTING.md  DETAIL.md  Dockerfile  README.md  TODO.md  config.yml  controller.sh  docker-compose.yml  dprint.json  fix-controller.sh  fix_controller.sh  import_map.json  install.sh  kill.sh  landstown.code-workspace  main.ts  nx.json  originalCamera.sh  package-lock.json  package.json  pnpm-lock.yaml  robot.sh  run.json  run.sh  run_robot.sh  start.sh  start_gitpod.sh  svelte.config.js  turbo.json  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt  requirements.txt'
2021_Code/: README.md
broadcaster/: Cargo.toml  output.mjpg
broadcaster/src/: main.rs  signal.rs
cabby/: Cargo.toml  build.rs
client/: .gitignore  TASKS.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  run.json  snel.config.ts  svelte.config.js  tailwind.config.cjs  vite.config.js  vite.config.ts
docs/: LINKS.md  MODULES.md  TOOLING.md
landstown-robotics-types/: package.json
mock/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
native-broadcaster/: .gitignore  package.json
native-cam/: index.py
native-camera/: .flake8  README.md  __init__.py  pyproject.toml  requirements.txt
native-camera/native_camera/: __init__.py
packet/: package.json  pnpm-lock.yaml  tsconfig.json
patches/: @threlte__rapier@1.1.4.patch  @threlte__rapier@2.0.0.patch  svelte-katex@0.1.2.patch
protocol/: main.proto  (+1 more)
(+423 files in other folders)
