[package]
name = "broadcaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.1"
chrono = "0.4"
clap = "3.0"
env_logger = "0.9"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"
log = "0.4.16"
rand = "0.8"
rust_socketio = "0.4.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["full", "rt"] }
tokio-util = { version = "0.6", features = ["codec"] }
webrtc = "0.6.0"
